[package]
name = "wof"
version = "0.1.0"
authors = ["Jones Magloire @Joxit"]
description = "The Who's On First rust library and command line."
edition = "2018"
license = "MIT"
autobins = false
repository = "https://github.com/Joxit/wof-cli"

[[bin]]
name = "wof"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
json = { git = "https://github.com/Joxit/json-rust.git", branch = "feat/custom-generator" }
walkdir = "^2.3.1"
regex = "^1.3.3"
libc = "*"
which = { version = "^3.1.0", optional = true }
tar = { version = "^0.4.26", optional = true }
flate2 = { version ="^1.0.13", optional = true }
structopt = { version = "^0.3", optional = true }
attohttpc = { version = "^0.8.0", optional = true }
chrono = { version = "*", optional = true }

[dependencies.log]
version = "*"
features = ["std"]
optional = true

[dependencies.git2]
version = "^0.10"
features = ["vendored-openssl"]
optional = true

[dependencies.rusqlite]
version = "^0.21.0"
features = ["bundled"]

[features]
cli = ["which", "tar", "flate2", "structopt", "attohttpc", "chrono", "log", "git2"]