[package]
name = "wof"
version = "0.2.0"
authors = ["Jones Magloire @Joxit"]
description = "The Who's On First rust library and command line."
edition = "2024"
license = "MIT"
autobins = false
repository = "https://github.com/Joxit/wof-cli"
homepage = "https://github.com/Joxit/wof-cli"
documentation = "https://docs.rs/wof/"
readme = "README.md"
keywords = ["cli"]
categories = [
  "command-line-utilities",
  "database-implementations",
  "data-structures",
  "parser-implementations",
]

[[bin]]
name = "wof"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
json = "^0.12.2"
walkdir = "^2.3.1"
regex = "^1.3.3"
libc = "^0.2.67"
shapefile = "^0.7.0"
md5 = "^0.7.0"
postgres = "^0.19.3"
lazy_static = "^1.4.0"
tar = { version = "^0.4.26", optional = true }
flate2 = { version = "^1.0.13", optional = true }
attohttpc = { version = "^0.29.2", optional = true }
chrono = { version = "^0.4.10", optional = true }
clap = { version = "^4.4", features = ["derive", "env"], optional = true }
clap_complete = { version = "^4.4", optional = true }

[dependencies.gdal]
version = "^0.18"
features = ["bindgen"]
optional = true

[dependencies.log]
version = "^0.4.8"
features = ["std"]
optional = true

[dependencies.git2]
version = "^0.20"
features = ["vendored-openssl"]
optional = true

[dependencies.rusqlite]
version = "0.36"
features = ["bundled"]

[features]
default = ["cli"]
cli = [
  "tar",
  "flate2",
  "clap",
  "clap_complete",
  "attohttpc",
  "chrono",
  "log",
  "git2",
]
with-gdal = ["gdal"]
